--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -3,58 +3,25 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
-        android:textSize="16sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/start_date"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/start_date"
-        android:id="@+id/buttonStartDate"
-        android:layout_gravity="center_horizontal" />
-
-    <TextView
-        android:textSize="16sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/end_date"
-        android:id="@+id/textView2"
-        android:layout_gravity="center_horizontal" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/end_date"
-        android:id="@+id/buttonEndDate"
-        android:layout_gravity="center_horizontal" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
-        android:id="@+id/confirmQuery"
-        android:layout_gravity="center_horizontal" />
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <com.jjoe64.graphview.GraphView
+        <fragment
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/graphExample" />
+            android:id="@+id/BGLListFragment"
+            android:name="team5.diabetesself_managmentapp.fragments.BGLListFragment"
+            />
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/MainQueryFragment"
+            android:name="team5.diabetesself_managmentapp.fragments.MainQueryFragment"
+
+            />
 
     </RelativeLayout>
 </LinearLayout>
