Added small space between entries in the query's BGL list. Fixed a small bug where the app crashes when the edit text inside the query's BGL list is empty.

--- a/app/src/main/res/layout/bgllist_entry_view.xml
+++ b/app/src/main/res/layout/bgllist_entry_view.xml
@@ -5,9 +5,10 @@
     android:layout_height="wrap_content"
     android:background="@drawable/layout_corning_diet"
     android:paddingBottom="5dp"
-    android:paddingTop="20dp"
+    android:paddingTop="5dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
+    android:layout_margin="5dp"
     android:layout_weight=".70">
 
     <LinearLayout
