--- a/app/src/main/res/layout/bglgraph_fragment.xml
+++ b/app/src/main/res/layout/bglgraph_fragment.xml
@@ -6,10 +6,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <com.jjoe64.graphview.GraphView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/graphExample" />
+           <com.github.mikephil.charting.charts.LineChart
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:id="@id/graphExample"></com.github.mikephil.charting.charts.LineChart>
 
             </RelativeLayout>
 </LinearLayout>
