--- a/app/src/main/res/layout/bglgraph_fragment.xml
+++ b/app/src/main/res/layout/bglgraph_fragment.xml
@@ -2,14 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-            <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:id="@+id/LayoutGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <com.github.mikephil.charting.charts.LineChart
 
-           <com.github.mikephil.charting.charts.LineChart
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:id="@id/graphExample"></com.github.mikephil.charting.charts.LineChart>
-
-            </RelativeLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/graphExample"/>
+                </RelativeLayout>
+                <LinearLayout
+                    android:visibility="invisible"
+                    android:id="@+id/LinearLayoutUpdateBGLQuery"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:id="@+id/editTextNewBGLValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter New BGL"
+                         />
+                    <Button
+                        android:id="@+id/ButtonSetGraphBGL"
+                        android:background="@drawable/set"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp" />
+                </LinearLayout>
+            </FrameLayout>
 </LinearLayout>
