--- a/app/src/main/res/layout/bglgraph_fragment.xml
+++ b/app/src/main/res/layout/bglgraph_fragment.xml
@@ -10,31 +10,60 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                 <com.github.mikephil.charting.charts.LineChart
-
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/graphExample"/>
                 </RelativeLayout>
+
                 <LinearLayout
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:background="@drawable/layout_corning_med"
+                    android:weightSum="2"
                     android:visibility="invisible"
-                    android:id="@+id/LinearLayoutUpdateBGLQuery"
                     android:layout_gravity="center"
-                    android:orientation="horizontal"
+                    android:id="@+id/LinearLayoutUpdateBGLQuery"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <EditText
-                        android:textSize="14sp"
-                        android:gravity="center"
-                        android:id="@+id/editTextNewBGLValue"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:orientation="horizontal"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:hint="Enter New BGL"
-                         />
-                    <Button
-                        android:id="@+id/ButtonSetGraphBGL"
-                        android:background="@drawable/set"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp" />
+                        android:layout_height="0dp"
+                        android:layout_weight="1.3">
+                        <EditText
+                            android:textSize="14sp"
+                            android:gravity="center"
+                            android:id="@+id/editTextNewBGLValue"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:hint="Enter New BGL"
+                             />
+                        <Button
+                            android:id="@+id/ButtonSetGraphBGL"
+                            android:background="@drawable/set"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight=".5"
+                        android:orientation="horizontal"
+                        >
+
+                        <EditText
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:textSize="13sp"
+                            android:id="@+id/EditTextGraphDateTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
             </FrameLayout>
 </LinearLayout>
