--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -66,12 +66,14 @@
             android:layout_weight="1.8"
             android:layout_height="match_parent">
             <com.github.lzyzsd.circleprogress.ArcProgress
+                app:arc_bottom_text="Average"
+                app:arc_text_color="#ff5b5b"
                 android:id="@+id/arc_progress"
                 android:layout_width="170dp"
                 android:layout_height="170dp"
                 app:arc_suffix_text="mg/dL"
                 app:arc_max="350"
-                app:arc_bottom_text_size="10dp"
+                app:arc_bottom_text_size="15sp"
                 app:arc_stroke_width="10dp"
                 app:arc_unfinished_color="#ff5b5b"
                 app:arc_finished_color="#5bbfff"
