--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -21,4 +21,9 @@
         android:title="@string/action_save"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/sign_out_menu"
+        android:title="@string/sign_out"
+        app:showAsAction="never"/>
+
 </menu>
